--- a/templates/partials/shopping-cart.hbs
+++ b/templates/partials/shopping-cart.hbs
@@ -1,21 +1,8 @@
-<div class="shopping-cart js-shopping-cart">
+<div class="header__cart js-shopping-cart">
   <a href="#" class="cart__toggle js-cart-toggle">Warenkorb</a>
   <a href="#" class="cart__close js-cart-close">Close</a>
   <div class="cart__contents">
-    <table class="cart__content-list">
-      <tr>
-        <th class="cart__item-name">Deine Bestellung</th>
-        <th class="cart__item-quantity"></th>
-        <th class="cart__item-price">Preis</th>
-      </tr>
-      {{> cartItem name='Batman' quantity='1' price='€ 12,99'}}
-      {{> cartItem name='Brillenpinguin' quantity='1' price='€ 8,99'}}
-      {{> cartItem name='Drachenritter Berserker' quantity='1' price='€ 28,99'}}
-      <tr class="cart__totals">
-        <td class="cart__total-label" colspan="2">Gesamt</td>
-        <td class="cart__total-price">€ 53,47</td>
-      </tr>
-    </table>
+    {{> cartList }}
     <a class="cart__to-checkout cta">Zur Kasse</a>
   </div>
 </div>
