Changed page header to be sticky, Added progress indicator styles

--- a/src/SprykerFeature/Zed/Application/Static/Assets/styles/component/_spy-page-content.scss
+++ b/src/SprykerFeature/Zed/Application/Static/Assets/styles/component/_spy-page-content.scss
@@ -1,8 +1,9 @@
 main.spy-page-content {
 	@include fitem(2, 1px, null, 1);
-	min-height:calc(100vh - #{($_ySpacing * 2)} );
+	z-index:-1;
+	min-height:100vh;
 	background:$_rgbSpyAthens;
-	padding:$_ySpacing $_xSpacing;
+	padding:($_xSpacing + 50px) $_ySpacing $_xSpacing;
 }
 
 nav.spy-page-nav+main.spy-page-content {
