--- a/src/SprykerFeature/Zed/Application/Static/Assets/styles/component/_spy-page-header.scss
+++ b/src/SprykerFeature/Zed/Application/Static/Assets/styles/component/_spy-page-header.scss
@@ -1,8 +1,6 @@
 header.spy-page-header {
-	@include fitem(null, 100%);
+	@include fixed(null, 0, 0, 100%, 50px, null, null, 0);
 	@include fbox;
-	z-index:0;
-	height:50px;
 	background:$_rgbWhite;
 	@include font(50px, 21px, $_rgbSpyRiverBed, $_ffCopy, $_ffCutReg);
 	@include pre(box-shadow, 0 1px 2px rgba($_rgbSpyRiverBed, 0.15));
@@ -64,5 +62,35 @@ header.spy-page-header {
 		border-left:1px solid $_rgbSpyAthens;
 
 		@import 'header-widget/_index.scss';
+	}
+
+	section.progress {
+		@include abs(null, 0, null, 0%, 2px, null, -2px, -1);
+		opacity:0.0;
+		@include pre(box-shadow, 0 0 10px rgba($_rgbSpyDodgerBlue, 1.0));
+		background:$_rgbSpyDodgerBlue;
+		@include pre(transition-property       , (opacity , width));
+		@include pre(transition-duration       , ($_tFast , $_tSlow));
+		@include pre(transition-delay          , (0ms     , $_tFast));
+		@include pre(transition-timing-function, (ease-out, cubic-bezier(0.0, 0.5, 0.0, 1.0)));
+
+		&:before {
+			content:'';
+			@include wh(block, null, 100%, 10px);
+			margin:-10px 0 0 -10px;
+			background:$_rgbWhite;
+			padding:0 10px;
+		}
+
+		&.active {
+			opacity:1.0;
+		}
+
+		&.complete {
+			width:100%;
+			@include pre(transition-duration       , ($_tFast , $_tFast));
+			@include pre(transition-delay          , (0ms     , 0ms));
+			@include pre(transition-timing-function, (ease-out, ease-in));
+		}
 	}
 }
