Added spy-action-switch example

--- a/src/SprykerFeature/Zed/UiExample/Presentation/Index/index.twig
+++ b/src/SprykerFeature/Zed/UiExample/Presentation/Index/index.twig
@@ -20,7 +20,7 @@
     {% include '@UiExample/Partials/Layout/spacing-plain.twig'   %}
 
     <section
-        spy-app="spyAction,spyGrid,spyForm,spyTemplate,spyFormat"
+        spy-app="spyAction,spyGrid,spyForm,spyFormAction,spyTemplate,spyFormat"
         ng-strict-di
         ng-controller="ComController"
     >
