added suport for use xml declaration

--- a/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/class.php.twig
+++ b/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/class.php.twig
@@ -13,7 +13,7 @@ use {{ use }};
  * !!! DO NOT CHANGE ANYTHING IN THIS FILE
  */
 {% if interfacesToImplement %}
-class {{ className }} extends AbstractTransfer{# implements {{ interfacesToImplement }}#}
+class {{ className }} extends AbstractTransfer{{ "\n" }}{# implements {{ interfacesToImplement }}#}
 {% else %}
 class {{ className }} extends AbstractTransfer
 {% endif %}
