--- a/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
+++ b/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
@@ -1,7 +1,6 @@
 {% macro method_set(sag) -%}
 
 {% import _self as mcr %}
-{# create setMethod() #}
 {%- if sag.is_special == 1 -%}{{ mcr.method_set_header(sag, 'array') }}{% else %}{{ mcr.method_set_header(sag, sag.parameterDataType) }}{%- endif %}
     {
         $this->{{ sag.passedParameter }}{{ writeIf('[]', 'array', sag.parameterDataType) }} = ${{ sag.passedParameter }};
@@ -20,9 +19,21 @@
 
         return $this;
     }
+
+    /**
+     * @var {{ writeIfNot(sag.parameterDataType~' ', '(^string)', sag.parameterDataType) }}${{ sag.passedParameter }}
+     */
+    public function remove{{ sag.propertyName|singular|camelCase }}()
+    {
+        $this->{{ sag.passedParameter }} = null;
+        $this->addModifiedProperty('{{ sag.passedParameter }}');
+
+        return $this;
+    }
 {% endif %}
 
 {%- endmacro %}
+
 
 {% macro method_set_header(sag, type) %}
     /**
@@ -32,6 +43,7 @@
      */
     public function set{{ sag.propertyName|camelCase }}({{ writeIfNot(type~' ', '(string|int|null)', type) }}${{ sag.passedParameter }})
 {% endmacro %}
+
 
 {% macro method_get(sag) %}
     /**
@@ -43,9 +55,10 @@
     }
 {% endmacro %}
 
+
 {% macro write_property(prop) %}
     /**
      * @var {{ prop.parameterDataType }} ${{ prop.propertyName }}
      */
-    protected ${{ prop.propertyName }}{% if prop.defaultValue is defined and prop.defaultValue != '' %} = {{ prop.defaultValue|quotedIfNotIntegers }}{% endif %};
+    private ${{ prop.propertyName }}{% if prop.defaultValue is defined and prop.defaultValue != '' %} = {{ prop.defaultValue|quotedIfNotIntegers }}{% endif %};
 {% endmacro %}
