tiny search icon changes

--- a/assets/styles/components/_search.scss
+++ b/assets/styles/components/_search.scss
@@ -27,13 +27,21 @@
   width: 35px;
   padding: 0 10px 1px;
   background-color: transparent;
-  color: transparent;
+  color: transparent !important;
   border: 0;
 
   font-family: 'icomoon';
   &::before {
     content: '\f002';
+    position: relative;
+    top: -2px;
+    left: -2px;
     color: $dark-color;
+
+  }
+
+  &:hover::before {
+    color: $light-color;
   }
 
 }
