--- a/templates/partials/shopping-cart.hbs
+++ b/templates/partials/shopping-cart.hbs
@@ -3,6 +3,6 @@
   <a href="#" class="cart__close js-cart-close">Close</a>
   <div class="cart__contents">
     {{> cartList }}
-    <a class="cart__to-checkout cta">Zur Kasse</a>
+    <a href="/checkout.html" class="cart__to-checkout cta">Zur Kasse</a>
   </div>
 </div>
