--- a/assets/styles/components/_main-nav.scss
+++ b/assets/styles/components/_main-nav.scss
@@ -1,17 +1,21 @@
 // taken from http://www.elijahmanor.com/css-animated-hamburger-icon/
 .nav-toggle {
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   top: 0;
+  left: 0;
   width: $step*2;
   height: $step;
   padding: $step $step / 2;
   @include bounce-transition(.2s, transform);
 
-  &:hover {
-    transform: translateX(-50%) scale(1.1);
+  @include media-query('small') {
+    left: 50%;
+    transform: translateX(-50%);
   }
+
+  // &:hover {
+  //   transform: translateX(-50%) scale(1.1);
+  // }
 
   span, span:before, span:after {
     cursor: pointer;
