number of items shown on the cart

--- a/assets/styles/components/_header-cart.scss
+++ b/assets/styles/components/_header-cart.scss
@@ -232,6 +232,18 @@
 
   }
 
+  &.js-cart-has-items::after {
+    content: attr(data-item-count);
+    position: absolute;
+    display: block;
+    top: 3px;
+    right: 3px;
+    height: 20px;
+    padding: 0px 7px 22px;
+    background-color: #e2694a;
+    border-radius: 13px;
+    color: white;
+  }
 
 
 }
