--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -2,7 +2,7 @@
 {{> header}}
 <div class="checkout">
   <div class="checkout__wrapper">
-    <div class="checkout__cart">
+    <div class="checkout__cart js-checkout-cart">
       {{> cartList }}
     </div>
     <div class="checkout__form">
