--- a/assets/styles/layout/_checkout.scss
+++ b/assets/styles/layout/_checkout.scss
@@ -26,7 +26,12 @@
 }
 
 .checkout__form-block, .checkout__cart {
-  margin: $step 0;
+
+  margin: $step $step*.5;
+  @include media-query('medium') {
+    margin: $step 0;
+  }
+
   background-color: $light-color;
   padding: $step;
   overflow: hidden;
@@ -35,8 +40,22 @@
   box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
+.checkout__form-block {
+  @include clearfix();
+
+  position: relative;
+
+  @include media-query('large') {
+    margin-right: 300px;
+  }
+  @include media-query('huge') {
+    margin-right: 420px;
+  }
+}
+
 .js-checkout-collapsed {
   padding: $step*.5 $step;
+  background-color: darken($light-color, 1%);
 
   :not(.form-block__heading) {
     display: none;
@@ -58,6 +77,7 @@
       border-color: transparent;
       margin-bottom: 0;
       pointer-events: none;
+      background-color: transparent;
     }
 
     // hide the alternate delivery address textarea if the checkbox isn't checked
@@ -67,6 +87,7 @@
 
     button.form-block__edit {
       display: block;
+      background-color: transparent;
     }
   }
 }
@@ -149,21 +170,15 @@
 }
 
 .checkout__form-block {
-  @include clearfix();
-
-  position: relative;
-
-  @include media-query('large') {
-    margin-right: 300px;
-  }
-  @include media-query('huge') {
-    margin-right: 420px;
-  }
 
   input, textarea, button {
+
+    width: 100%;
     float: left;
     clear: left;
-    width: 50%;
+   @include media-query('smallish') {
+      width: 50%;
+    }
   }
 
   textarea {
@@ -273,8 +288,10 @@
     left: -$step*1.5;
     width: $step;
     height: $step;
+    border: 0;
     font-size: 0;
     font-family: 'icomoon';
+    @include bounce-transition(.3s);
 
     &::before {
       content: '\e600';
@@ -282,6 +299,12 @@
       top: -10px;
       left: -$step*.5;
       font-size: $step;
+    }
+
+    &:hover {
+      background-color: white;
+      color: $dark-color;
+      transform: rotate(360deg);
     }
   }
 
