added xml-definition for search-page transfers

--- a/Bundles/Transfer/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
+++ b/Bundles/Transfer/src/SprykerEngine/Zed/Transfer/Business/Model/Generator/Templates/macros.php.twig
@@ -41,7 +41,7 @@
      *
      * @return $this
      */
-    public function set{{ sag.propertyName|camelCase }}({{ writeIfNot(type~' ', '(string|int|null)', type) }}${{ sag.passedParameter }})
+    public function set{{ sag.propertyName|camelCase }}({{ writeIfNot(type~' ', '(bool|string|int|null)', type) }}${{ sag.passedParameter }})
 {% endmacro %}
 
 
