--- a/Bundles/Ui/src/SprykerFeature/Zed/Ui/Static/Assets/scripts/spyGrid/template/GridPages.html
+++ b/Bundles/Ui/src/SprykerFeature/Zed/Ui/Static/Assets/scripts/spyGrid/template/GridPages.html
@@ -1,1 +1,1 @@
-<span spy-grid-items="model.items" label="label.items"></span><div spy-grid-page="model.page" label="label.pages"></div>
+<span ng-show="showItem" spy-grid-items="model.items" label="label.items"></span><div ng-show="showPage" spy-grid-page="model.page" label="label.pages"></div>
