Added select box with many items

--- a/Bundles/UiExample/src/SprykerFeature/Zed/UiExample/Presentation/Partials/Layout/spacing/example-forms.twig
+++ b/Bundles/UiExample/src/SprykerFeature/Zed/UiExample/Presentation/Partials/Layout/spacing/example-forms.twig
@@ -16,7 +16,7 @@
 
 <div spy-input-edit="{type:'string',value:'',accepts:[],messages:[]}" options="{label:'Editor'}"></div>
 
-<div spy-input-select="{type:'string',value:'bar',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'}],messages:[]}" options="{label:'Select'}"></div>
+<div spy-input-select="{type:'string',value:'bar',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'},{value:'what',label:'What'},{value:'why',label:'Why'},{value:'when',label:'When'}, {value:'who',label:'Who'}],messages:[]}" options="{label:'Select'}"></div>
 <div spy-input-select="{type:'string',value:'baz',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'}],messages:[]}" options="{label:'Disabled Select',disabled:true,optional:'optional'}"></div>
 <div spy-input-select="{type:'string',value:'',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'}],messages:['Select one']}" options="{label:'Select',optional:'optional',empty:'Please select'}"></div>
 
