Removed scrollbar visibility from select box when transitioning

--- a/Bundles/Ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/bundle/extend/assembly/field/_select.scss
+++ b/Bundles/Ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/bundle/extend/assembly/field/_select.scss
@@ -19,6 +19,12 @@
 			@extend %field-select-list;
 		}
 
+		&.ng-animate {
+			ul {
+				@extend %field-select-list-transition;
+			}
+		}
+
 		li {
 			@extend %field-select-item;
 
