--- a/Bundles/UiExample/src/SprykerFeature/Zed/UiExample/Presentation/Partials/Action/index.twig
+++ b/Bundles/UiExample/src/SprykerFeature/Zed/UiExample/Presentation/Partials/Action/index.twig
@@ -75,6 +75,10 @@
 
 <section class="spy-layout sparse">
     <div class="spy-layout buttons">
-        <button class="button" spy-action="/uiexample/action/uiexample">Click?</button>
+        <button
+            class="button"
+            ng-class="{ disabled : query }"
+            spy-action="/uiexample/action/uiexample"
+        >Click?</button>
     </div>
 </section>
