Added fixed height TextSelect inputs

--- a/Bundles/Ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/bundle/extend/assembly/field/_textselect.scss
+++ b/Bundles/Ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/bundle/extend/assembly/field/_textselect.scss
@@ -18,6 +18,10 @@
 			@extend %field-select-list;
 		}
 
+		&.ng-animate ul {
+			@extend %field-select-list-transition;
+		}
+
 		li {
 			@extend %field-select-item;
 
