Added options to TextSelect

--- a/Bundles/UiExample/src/SprykerFeature/Zed/UiExample/Presentation/Partials/Layout/spacing/example-forms.twig
+++ b/Bundles/UiExample/src/SprykerFeature/Zed/UiExample/Presentation/Partials/Layout/spacing/example-forms.twig
@@ -6,7 +6,7 @@
 <div spy-input-password="{type:'string',value:'The same as my suitcase',accepts:[],messages:[]}" options="{label:'Disabled Password',disabled:true,optional:'optional'}"></div>
 <div spy-input-password="{type:'string',value:'',accepts:[],messages:['Eyes only']}" options="{label:'Password with errors',optional:'optional'}"></div>
 
-<div spy-input-text-select="{type:'string',value:'',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'}],messages:[]}" options="{label:'TextSelect'}"></div>
+<div spy-input-text-select="{type:'string',value:'',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'},{value:'what',label:'What'},{value:'why',label:'Why'},{value:'when',label:'When'}, {value:'who',label:'Who'},{value:'which',label:'Which'},{value:'when',label:'When'},{value:'whatever',label:'Whatever'}],messages:[]}" options="{label:'TextSelect'}"></div>
 <div spy-input-text-select="{type:'string',value:'foo',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'}],messages:[]}" options="{label:'Disabled TextSelect',disabled:true,optional:'optional'}"></div>
 <div spy-input-text-select="{type:'string',value:'',accepts:[{value:'foo',label:'Foo'},{value:'bar',label:'Bar'},{value:'baz',label:'Baz'}],messages:['Bad dog!']}" options="{label:'TextSelect with errors',optional:'optional'}"></div>
 
